--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
+
+@import '~antd/dist/antd.css';
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 6vmin;
+  height: 40vmin;
   pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
@@ -21,13 +30,12 @@
 .App-link {
   color: #61dafb;
 }
-.footer {
-  position: fixed;
-  height: 50px;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #263238;
-  color: white;
-  text-align: center;
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
