--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -20,3 +20,9 @@
   .site-layout .site-layout-background {
     background: #fff;
   }
+
+#components-layout-demo-custom-trigger .logo {
+    height: 32px;
+    margin: 16px;
+    background: rgba(255, 255, 255, 0.3);
+}
