--- a/src/Components/Layout/TopNav.css
+++ b/src/Components/Layout/TopNav.css
@@ -14,3 +14,11 @@
 	color: rgb(2, 27, 49);
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+#components-layout-demo-custom-trigger .trigger {
+    padding: 0 24px;
+    font-size: 18px;
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
+}
