--- a/src/Components/Visualizer/Code Space/codeSpace.scoped.css
+++ b/src/Components/Visualizer/Code Space/codeSpace.scoped.css
@@ -1,20 +1,18 @@
-.viz-wrapper {
-    background-image: url("./assets/space-bg.jpg");
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
 h3 {
     font-weight: 800;
 }
 
 .img-alien {
-    width: 9rem;
-    height: 11rem;
-    margin-left: -120px;
+    width: 6rem;
+    margin-left: -60px;
+    margin-top:10px;
     -webkit-filter: drop-shadow(12px 12px 25px #33278383);
     
+}
+
+.notes{
+    color: white;
+    font-size:16px
 }
 
 .btn {
@@ -45,7 +43,9 @@ h3 {
 /* .not-highlight {
     background-color: white;
 } */
-
+.btn-cor{
+    font-size:13px
+}
 .btn-cor:focus{
     outline:none !important;
     border:none !important;
@@ -98,4 +98,11 @@ h3 {
 
 .avatar {
 	transform: translatey(0px);
-	animation: float 3s ease-in-out infinite;}
+    animation: float 3s ease-in-out infinite;
+}
+.red-font{
+    font-size:12px
+}
+
+
+
