--- a/src/Components/Visualizer/viz-layout.scoped.css
+++ b/src/Components/Visualizer/viz-layout.scoped.css
@@ -5,6 +5,13 @@
     border:2px solid white;
 }
 
+.viz-wrapper {
+    background-image: url("./Code Space/assets/space-bg.jpg") !important;
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 #codeSpace{
     background-color:rgba(255, 255, 255, 0.9) !important;
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.226);
